# rombus

./: .gitignore  .rmf_schedule_node.yaml  CompleteButch.py  Dockerfile  GetPoints.py  GetProducts.py  README.md  Rabota.py  ReadMe.md  addStep.py  commands.txt  docker-compose.yml  errors.txt  tree.txt  visual.py
documentation/: Create_robot.md  Fleet Adapter.md  Fleet_Adapter.md  README.md  RMF Web.md  RMF-Web.md  Structure.md  Traffic-editor.md  Документация.md
instruction/: инструкция.md
presets/fabric_map/: fabric_map_robot_config.yaml
src/free_fleet_adapter/: CMakeLists.txt
src/free_fleet_adapter/free_fleet_adapter/: fleet_adapter.py  nav2_robot_adapter.py
src/free_fleet_examples/: CMakeLists.txt
src/free_fleet_examples/config/fleet/: fast_turtlebot3_fleet_config.yaml  turtlebot3_fleet_config.yaml
src/free_fleet_examples/config/template/: fast_turtlebot3_fleet_config.template.yaml  turtlebot3_fleet_config.template.yaml
src/free_fleet_examples/config/zenoh/: nav2_unique_multi_tb3_zenoh_bridge_ros2dds_client_config.json5
src/free_fleet_examples/launch/: nav2_unique_multi_tb3_simulation_fleet_adapter.launch.xml  turtlebot3_world_rmf_common.launch.xml
src/lab_bringup/: CMakeLists.txt  package.xml
src/lab_bringup/launch/: multi_real_launch.py  multi_sim_launch.py
src/lab_bringup/scripts/: .rmf_schedule_node.yaml  add_robot.py  start_all_actions.py  update_arms.py  update_config.py  update_gazebo_world.py  updater_fleet_robots.py
src/main_simulation/: CMakeLists.txt  package.xml
src/main_simulation/config/: first_map_robot_config.yaml  mocks.yaml  new_map_robot_config.yaml  warehouse_robot_config.yaml
src/main_simulation/coords/: fabric_map_coords.yaml  first_map_coords.yaml  new_map_coords.yaml  warehouse_coords.yaml
src/main_simulation/launch/: arms_launch.py  multi_sim_launch.py
src/main_simulation/mocks/: arm_mock_dispenser.cpp  arm_mock_ingestor.cpp
src/main_simulation/params/: nav2_multirobot_params_fast.yaml  nav2_multirobot_params_template.yaml
src/mes_rmf_adapter/: package.xml  setup.cfg  setup.py
src/mes_rmf_adapter/mes_rmf_adapter/: adapter.py  adapter_2.py  mock_server.py  start_adapter.py  translator_coords.py  update_arms.py  utils.py
src/test_building_maps/: CMakeLists.txt  package.xml
src/test_building_maps/configs/: fabric_map_config.yaml  first_map_config.yaml  new_map_config.yaml  warehouse_config.yaml
src/test_building_maps/configs/template/: template_config.yaml
src/test_building_maps/maps/: fabric_map.building.yaml  first_map.building.yaml  new_map.building.yaml  test.building.yaml  test_map.building.yaml  warehouse.building.yaml
